--- a/src/Gateway.Blazor/Pages/_Host.cshtml
+++ b/src/Gateway.Blazor/Pages/_Host.cshtml
@@ -1,4 +1,5 @@
-﻿@page "/"
+﻿@page
+@model HostModel
 @using Microsoft.AspNetCore.Components.Web
 @namespace Gateway.Blazor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
