--- a/src/Gateway.Blazor/Pages/Home.razor
+++ b/src/Gateway.Blazor/Pages/Home.razor
@@ -24,7 +24,7 @@
         bool isAuthenticated = false;
         for (int i = 0; i < 3; i++)
         {
-            isAuthenticated = AuthService.IsAuthenticated();
+            isAuthenticated = await AuthService.IsAuthenticatedAsync();
             if (isAuthenticated)
                 break;
                 
