--- a/src/Gateway.Blazor/Pages/Index.razor
+++ b/src/Gateway.Blazor/Pages/Index.razor
@@ -10,16 +10,16 @@
     </MudText>
     
     <!-- Botón de Login centrado -->
-   @*  <MudButton Variant="Variant.Filled" 
+     <MudButton Variant="Variant.Filled" 
               Color="Color.Primary" 
               Size="Size.Large"
                Href="/login"
               Style="min-width: 200px;">
         Iniciar Sesión
-    </MudButton> *@
-    <MudButton Color="Color.Primary"
+    </MudButton>  
+     @*<MudButton Color="Color.Primary"
                Variant="Variant.Filled"
                OnClick="@(() => Navigation.NavigateTo("/login"))">
         Iniciar Sesión
-    </MudButton>
+    </MudButton>*@
 </div>
